delgrosso equation notation fixes

--- a/content/sound_speed_sea_delgrosso/include/sound_speed_sea_delgrosso_4.tex
+++ b/content/sound_speed_sea_delgrosso/include/sound_speed_sea_delgrosso_4.tex
@@ -1,5 +1,5 @@
 \begin{array}{l}
-\Delta {C_{TPS}}\left( {T,P,S} \right) = {C_{TP}}TP + {C_{T3P}}{T^3}P + {C_{TP2}}T{P^2}\\
+\Delta {C_{STP}}\left( {T,P,S} \right) = {C_{TP}}TP + {C_{T3P}}{T^3}P + {C_{TP2}}T{P^2}\\
  + {C_{T2P2}}{T^2}{P^2} + {C_{TP3}}T{P^3} + {C_{ST}}ST\\
  + {C_{ST2}}S{T^2} + {C_{STP}}STP + {C_{S2TP}}{S^2}TP + {C_{S2P2}}{S^2}{P^2}
 \end{array}
