work on depth to pressure leroy 97 equation

--- a/content/depth_to_pressure_sea_leroy_97/include/depth_to_pressure_sea_leroy_97.tex
+++ b/content/depth_to_pressure_sea_leroy_97/include/depth_to_pressure_sea_leroy_97.tex
@@ -1,1 +1,1 @@
-P\left( {Z,\phi } \right) = h\left( {Z,\phi } \right) - \delta h\left( Z \right)
+P\left( {Z,\phi } \right) = P\left( {Z,45} \right) \times k\left( {Z,\phi } \right)
