--- a/content/depth_to_pressure_sea_leroy_97/include/depth_to_pressure_sea_leroy_97_2.tex
+++ b/content/depth_to_pressure_sea_leroy_97/include/depth_to_pressure_sea_leroy_97_2.tex
@@ -1,4 +1,1 @@
-\begin{array}{l}
-    h\left( {Z,45} \right) = 1.00818 \times {10^{ - 2}}Z + 2.465 \times {10^{ - 8}}{Z^2}\\
-     - 1.25 \times {10^{ - 13}}{Z^3} + 2.8 \times {10^{ - 19}}{Z^4}
-\end{array}
+k\left( {Z,\phi } \right) = \frac{{g\left( \phi  \right) - 2 \times {{10}^{ - 5}}Z}}{{9.80612 - 2 \times {{10}^{ - 5}}Z}}
