--- a/content/depth_to_pressure_sea_leroy_97/include/depth_to_pressure_sea_leroy_97_3.tex
+++ b/content/depth_to_pressure_sea_leroy_97/include/depth_to_pressure_sea_leroy_97_3.tex
@@ -1,1 +1,1 @@
-k\left( {Z,\phi } \right) = \frac{{g\left( \phi  \right) - 2 \times {{10}^{ - 5}}Z}}{{9.80612 - 2 \times {{10}^{ - 5}}Z}}
+g\left( \phi  \right) = 0.7803\left( {1 + 5.3 \times {{10}^{ - 3}}{{\sin }^2}\left( \phi  \right)} \right)
