pre-release fixes

--- a/content/sound_absorption_sea_thorp/include/sound_absorption_sea_thorp.tex
+++ b/content/sound_absorption_sea_thorp/include/sound_absorption_sea_thorp.tex
@@ -1,1 +1,1 @@
-\alpha \left( f \right)  = {\frac{{0.1{f^2}}}{{1 + {f^2}}} + \frac{{40{f^2}}}{{4100 + {f^2}}}}
+\alpha \left( f \right) = \frac{{0.1{f^2}}}{{1 + {f^2}}} + \frac{{40{f^2}}}{{4100 + {f^2}}}
